added projects links and changes in the font contact header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <section id="projects">
       <h2>These are some of my projects</h2>
       <div id="projects-grid">
-         <a target="_blank" href="" class="project project-tile">
+         <a target="_blank" href="https://gabvilla.github.io/tribute-page/" class="project project-tile">
             <img class="project-img" src="https://source.unsplash.com/random/400x390/?fish" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
@@ -43,7 +43,7 @@
                <span class="code">/ ></span> 
             </p>
          </a>
-         <a target="_blank" href="" class="project project-tile">
+         <a target="_blank" href="https://gabvilla.github.io/projeto-android/" class="project project-tile">
             <img class="project-img" src="https://source.unsplash.com/random/400x390/?tiger" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
@@ -51,7 +51,7 @@
                <span class="code">/ ></span> 
             </p>
          </a>
-         <a target="_blank" href="" class="project project-tile">
+         <a target="_blank" href="https://gabvilla.github.io/violin-landing-page/" class="project project-tile">
             <img class="project-img" src="https://source.unsplash.com/random/400x390/?lion" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
@@ -59,7 +59,7 @@
                <span class="code">/ ></span> 
             </p>
          </a>
-         <a target="_blank" href="" class="project project-tile">
+         <a target="_blank" href="https://gabvilla.github.io/survey-form-model/" class="project project-tile">
             <img class="project-img" src="https://source.unsplash.com/random/400x390/?puma" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
