--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
    <section id="welcome-section">
       <h1>Hi, my name is Gabriel</h1>
       <p>i'm a front-end developer</p>
+      <p>I help people and companies to create unique digital experiences</p>
    </section>
    <!--END WELCOME SECTION-->
 
@@ -36,7 +37,7 @@
       <h2>These are some of my projects</h2>
       <div id="projects-grid">
          <a target="_blank" href="https://gabvilla.github.io/tribute-page/" class="project project-tile">
-            <img class="project-img" src="https://source.unsplash.com/random/400x390/?fish" alt="">
+            <img class="project-img" src="imagens/tribute-page.png" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
                   Tribute Page
@@ -44,7 +45,7 @@
             </p>
          </a>
          <a target="_blank" href="https://gabvilla.github.io/projeto-android/" class="project project-tile">
-            <img class="project-img" src="https://source.unsplash.com/random/400x390/?tiger" alt="">
+            <img class="project-img" src="imagens/projeto-android.png" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
                   Projeto Android
@@ -52,7 +53,7 @@
             </p>
          </a>
          <a target="_blank" href="https://gabvilla.github.io/violin-landing-page/" class="project project-tile">
-            <img class="project-img" src="https://source.unsplash.com/random/400x390/?lion" alt="">
+            <img class="project-img" src="imagens/violin-landing-page.png" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
                   Violin Landing Page
@@ -60,7 +61,7 @@
             </p>
          </a>
          <a target="_blank" href="https://gabvilla.github.io/survey-form-model/" class="project project-tile">
-            <img class="project-img" src="https://source.unsplash.com/random/400x390/?puma" alt="">
+            <img class="project-img" src="imagens/survey-form.png" alt="">
             <p class="project-descrip">
                <span class="code">< </span> 
                   Survey Form
