Add existing file

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                <span class="code">/ ></span> 
             </p>
          </a>
-         <a target="_blank" href="https://gabvilla.github.io/violin-landing-page/" class="project project-tile">
-            <img class="project-img" src="imagens/violin-landing-page.png" alt="">
+         <a target="_blank" href="https://gabvilla.github.io/barber-landing-page/" class="project project-tile">
+            <img class="project-img" src="imagens/barber-landing-page.png" alt="barber landing page">
             <p class="project-descrip">
                <span class="code">< </span> 
-                  Violin Landing Page
+                  Barber Landing Page
                <span class="code">/ ></span> 
             </p>
          </a>
