altered the favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Gabriel Villassanti</title>
    <link rel="stylesheet" href="style.css">
+   <link rel="shortcut icon" href="imagens/GVILLAS icon.ico" type="image/x-icon">
    <script src="https://kit.fontawesome.com/69fe52baca.js" crossorigin="anonymous"></script>
 </head>
 <body>
